--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angularGulp",
+  "name": "angularFlickrSearch",
   "version": "0.0.0",
   "dependencies": {
     "angular-animate": "~1.5.3",
