--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angularGulp",
+  "name": "angularFlickrSearch",
   "version": "0.0.0",
   "dependencies": {
     "express": "^4.14.0",
