--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ node_js:
   - "6.1"
 before_script:
   - npm install -g gulp
+  - npm install -g gulp-cli
+  - npm install -g bower
 script:
   - npm install
   - bower install
