--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ script:
 install:
   - npm install -g firebase-tools
 after_success:
-  - firebase deploy --token
+  - firebase deploy --token $FIREBASE_TOKEN
