--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ script:
   - npm install
   - bower install
   - gulp test
+  - gulp build
 install:
   - npm install -g firebase-tools
 after_success:
