--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "angularFlickrSearch",
   "version": "0.0.0",
   "dependencies": {
+    "bower": "^1.8.0",
     "express": "^4.14.0",
     "gulp-cli": "^1.2.2",
     "gzippo": "^0.2.0",
