--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "start": "node web.js",
     "prestart": "gulp build",
-    "postinstall": "bower install"
+    "postinstall": "bower install",
+    "heroku-postbuild": "gulp build"
   },
   "devDependencies": {
     "estraverse": "~4.1.0",
