--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bower": "^1.8.0",
     "express": "^4.14.0",
+    "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
     "gzippo": "^0.2.0",
     "morgan": "^1.7.0"
